--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/caeruslyai/backend#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "modules": "^0.4.0",
