--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "wordpass123",
+        "password": "duck0803",
         "database": "mock_db",
         "host": "localhost",
         "dialect": "mysql"
