--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/caeruslyai/backend#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
@@ -28,6 +28,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "sequelize": "^5.11.0"
+    "sequelize": "^5.11.0",
+    "session": "^0.1.0"
   }
 }
